force-app/main/default/objects/Pipeline__c/fields/Escrow_Company_Entera__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company_Entera__c</fullName>
    <formula>Prospect_Record__r.Escrow_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Company - Text</label>
    <type>Text</type>
</CustomField>