force-app/main/default/objects/Pipeline__c/fields/Escrow_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Open_Date__c</fullName>
    <description>Gives the Escrow open date</description>
    <label>Escrow Open Date</label>
    <type>Date</type>
</CustomField>