force-app/main/default/objects/Pipeline__c/fields/Escrow_Wiring_Complete__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Wiring_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Escrow wiring is complete</description>
    <inlineHelpText>Once the wiring is complete, the Treasury team will check this checkbox and this would send out an email notification to the Transaction Coordinator notifying that the escrow wiring is complete.</inlineHelpText>
    <label>EMD Payment Complete</label>
    <type>Checkbox</type>
</CustomField>