force-app/main/default/objects/Pipeline__c/fields/Escrow_Wiring_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Wiring_Complete_Date__c</fullName>
    <label>EMD Complete Date</label>
    <type>Date</type>
</CustomField>