force-app/main/default/objects/Pipeline__c/fields/Estimated_Due_Diligence_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Due_Diligence_End_Date__c</fullName>
    <description>Gives the Estimated due diligence end date</description>
    <inlineHelpText>Option Expiration date coming from Source</inlineHelpText>
    <label>Estimated Due Diligence End Date</label>
    <type>Date</type>
</CustomField>