force-app/main/default/objects/Pipeline__c/fields/Estimated_Move_Out_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Move_Out_at_Closing__c</fullName>
    <inlineHelpText>Date Field Entered by the Transaction Coordinator</inlineHelpText>
    <label>Estimated Move Out at Closing</label>
    <type>Date</type>
</CustomField>