force-app/main/default/objects/Pipeline__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>BPO Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>