force-app/main/default/objects/Pipeline__c/fields/Executive__c.field-meta.xml
<CustomField>
    <fullName>Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the Executive&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Executive/VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipeline2</relationshipName>
    <type>Lookup</type>
</CustomField>