force-app/main/default/objects/Pipeline__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>Gives the Expected close date</description>
    <inlineHelpText>Date on which the Property is expected to close. This comes from Entera.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>