force-app/main/default/objects/Pipeline__c/fields/Expected_Escrow_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Escrow_Close_Date__c</fullName>
    <description>Gives the Expected Escrow Close Date</description>
    <label>Contract Escrow Close Date</label>
    <type>Date</type>
</CustomField>