force-app/main/default/objects/Pipeline__c/fields/Extension_date__c.field-meta.xml
<CustomField>
    <fullName>Extension_date__c</fullName>
    <description>Gives the Extension date if the offer is extended</description>
    <label>Extension date</label>
    <type>Date</type>
</CustomField>