force-app/main/default/objects/Pipeline__c/fields/Field_PM__c.field-meta.xml
<CustomField>
    <fullName>Field_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipelines5</relationshipName>
    <type>Lookup</type>
</CustomField>