force-app/main/default/objects/Pipeline__c/fields/Frequency_of_the_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_the_Assessment__c</fullName>
    <label>Frequency of the Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>