force-app/main/default/objects/Pipeline__c/fields/Funds_Due_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Funds_Due_from_Buyer__c</fullName>
    <description>Gives the Funds due from buyer</description>
    <formula>Closing_Statement_Contract_Price__c - Closing_Statement_Deposit__c - ( Acq_Costs_Paid_at_Closing__c + Other_Costs_Paid_at_Closing__c )</formula>
    <label>Funds Due from Buyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>