force-app/main/default/objects/Pipeline__c/fields/Funds_Due_from_Buyer_Match__c.field-meta.xml
<CustomField>
    <fullName>Funds_Due_from_Buyer_Match__c</fullName>
    <description>Checked if Funds due from Buyer Match</description>
    <formula>IF(  COE_Funds_Amount__c  =   Closing_Statement_Funds_Due_from_Buyer__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Due from Buyer Match</label>
    <type>Checkbox</type>
</CustomField>