force-app/main/default/objects/Pipeline__c/fields/Gate_Comment__c.field-meta.xml
<CustomField>
    <fullName>Gate_Comment__c</fullName>
    <label>Gate Comment</label>
    <type>TextArea</type>
</CustomField>