force-app/main/default/objects/Pipeline__c/fields/Gate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Gate_Phone__c</fullName>
    <label>Gate Phone</label>
    <type>Phone</type>
</CustomField>