force-app/main/default/objects/Pipeline__c/fields/Gate_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Gate_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gate Y/N</label>
    <type>Checkbox</type>
</CustomField>