force-app/main/default/objects/Pipeline__c/fields/HOA_Comments__c.field-meta.xml
<CustomField>
    <fullName>HOA_Comments__c</fullName>
    <label>HOA Comments</label>
    <type>TextArea</type>
</CustomField>