force-app/main/default/objects/Pipeline__c/fields/HOA_Company__c.field-meta.xml
<CustomField>
    <fullName>HOA_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOA Community</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Homeowner Association</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipelines (HOA Community)</relationshipLabel>
    <relationshipName>Pipelines3</relationshipName>
    <type>Lookup</type>
</CustomField>