force-app/main/default/objects/Pipeline__c/fields/HOA_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>HOA_Company_Name__c</fullName>
    <inlineHelpText>This is for the Transaction Co-ordinator to input the HOA Company name</inlineHelpText>
    <label>HOA Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>