force-app/main/default/objects/Pipeline__c/fields/HOA_Estoppel_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Estoppel_Approval_Date__c</fullName>
    <description>Gives the HOA Estoppel Approval Date</description>
    <label>HOA Estoppel Approval Date</label>
    <type>Date</type>
</CustomField>