force-app/main/default/objects/Pipeline__c/fields/HOA_Estoppel_Notes__c.field-meta.xml
<CustomField>
    <fullName>HOA_Estoppel_Notes__c</fullName>
    <description>Gives the HOA Estoppel notes</description>
    <label>Title Contact Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>