force-app/main/default/objects/Pipeline__c/fields/HOA_Estoppel_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Estoppel_Received_Date__c</fullName>
    <label>HOA Estoppel Received Date</label>
    <type>Date</type>
</CustomField>