force-app/main/default/objects/Pipeline__c/fields/HOA_Estoppel_Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>HOA_Estoppel_Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if HOA Estoppel reviewed &amp; approved</description>
    <label>HOA Estoppel Reviewed &amp; Approved</label>
    <type>Checkbox</type>
</CustomField>