force-app/main/default/objects/Pipeline__c/fields/HOA_Information_Received__c.field-meta.xml
<CustomField>
    <fullName>HOA_Information_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Information Received</label>
    <type>Checkbox</type>
</CustomField>