force-app/main/default/objects/Pipeline__c/fields/HOA_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>HOA_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Not Applicable</label>
    <type>Checkbox</type>
</CustomField>