force-app/main/default/objects/Pipeline__c/fields/HOA_Transfer_Fee__c.field-meta.xml
<CustomField>
    <fullName>HOA_Transfer_Fee__c</fullName>
    <label>HOA Transfer Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>