force-app/main/default/objects/Pipeline__c/fields/Initial_BPO_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_BPO_Date__c</fullName>
    <description>Initial BPO Date</description>
    <label>Initial BPO Date</label>
    <type>Date</type>
</CustomField>