force-app/main/default/objects/Pipeline__c/fields/Initial_BPO_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_BPO_Value__c</fullName>
    <description>Initial BPO Value</description>
    <label>Initial BPO Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>