force-app/main/default/objects/Pipeline__c/fields/Initial_Inspection_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Inspection_Budget_Amount__c</fullName>
    <formula>Prospect_Record__r.Initial_Rehab_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Initial Rehab Estimate from Source</inlineHelpText>
    <label>Initial Inspection Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>