force-app/main/default/objects/Pipeline__c/fields/Initiate_COE_Wire__c.field-meta.xml
<CustomField>
    <fullName>Initiate_COE_Wire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate COE Wire</label>
    <type>Checkbox</type>
</CustomField>