force-app/main/default/objects/Pipeline__c/fields/Inspection_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Period_End_Date__c</fullName>
    <description>Gives the Inspection period end date</description>
    <label>Inspection Period End Date</label>
    <type>Date</type>
</CustomField>