force-app/main/default/objects/Pipeline__c/fields/Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Date__c</fullName>
    <formula>Inspection_ID__r.Inspection_Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>