force-app/main/default/objects/Pipeline__c/fields/Is_New_Construction__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Construction__c</fullName>
    <formula>Prospect_Record__r.Is_New_Construction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New Construction</label>
    <type>Checkbox</type>
</CustomField>