force-app/main/default/objects/Pipeline__c/fields/Lease_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Approval_Date__c</fullName>
    <description>Gives the Lease approval date</description>
    <label>Lease Approval Date</label>
    <type>Date</type>
</CustomField>