force-app/main/default/objects/Pipeline__c/fields/Lease_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lease_Comments__c</fullName>
    <label>Lease Comments</label>
    <type>TextArea</type>
</CustomField>