force-app/main/default/objects/Pipeline__c/fields/Lease_HAP_Rent__c.field-meta.xml
<CustomField>
    <fullName>Lease_HAP_Rent__c</fullName>
    <description>Gives the Lease HAP rent</description>
    <label>Lease HAP Rent</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>