force-app/main/default/objects/Pipeline__c/fields/Lease_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lease_Notes__c</fullName>
    <label>Lease Notes</label>
    <type>TextArea</type>
</CustomField>