force-app/main/default/objects/Pipeline__c/fields/Lease_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Lease_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Lease review required</description>
    <inlineHelpText>Required only if the Occupany Status is Tenant Occupied</inlineHelpText>
    <label>Lease Review Required</label>
    <type>Checkbox</type>
</CustomField>