force-app/main/default/objects/Pipeline__c/fields/Lease_Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>Lease_Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Lease is reviewed &amp; approved</description>
    <label>Lease Reviewed &amp; Approved</label>
    <type>Checkbox</type>
</CustomField>