force-app/main/default/objects/Pipeline__c/fields/Lease_Tenant_Rent__c.field-meta.xml
<CustomField>
    <fullName>Lease_Tenant_Rent__c</fullName>
    <description>Gives the lease rent paid by the tenant</description>
    <label>Lease Tenant Rent</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>