force-app/main/default/objects/Pipeline__c/fields/Lease_Total_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lease_Total_Rent_Amount__c</fullName>
    <description>Gives the lease total rent amount</description>
    <label>Lease Total Rent Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>