force-app/main/default/objects/Pipeline__c/fields/Leaseback__c.field-meta.xml
<CustomField>
    <fullName>Leaseback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leaseback</label>
    <type>Checkbox</type>
</CustomField>