force-app/main/default/objects/Pipeline__c/fields/Leaseback_Actual_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Leaseback_Actual_Move_Out_Date__c</fullName>
    <inlineHelpText>The date the lessor actually moved out</inlineHelpText>
    <label>Leaseback Actual Move Out Date</label>
    <type>Date</type>
</CustomField>