force-app/main/default/objects/Pipeline__c/fields/Leaseback_Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Leaseback_Security_Deposit_Amount__c</fullName>
    <label>Leaseback Security Deposit Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>