force-app/main/default/objects/Pipeline__c/fields/Leaseback_TIP_Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Leaseback_TIP_Lease_Expiration_Date__c</fullName>
    <inlineHelpText>The expiration date on the leaseback</inlineHelpText>
    <label>Leaseback/TIP Lease Expiration Date</label>
    <type>Date</type>
</CustomField>