force-app/main/default/objects/Pipeline__c/fields/Lessee_Email__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Email__c</fullName>
    <label>Lessee Email</label>
    <type>Email</type>
</CustomField>