force-app/main/default/objects/Pipeline__c/fields/Lessee_Name__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Name__c</fullName>
    <description>Gives the Lease tenant&apos;s name</description>
    <label>Lessee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>