force-app/main/default/objects/Pipeline__c/fields/Lessee_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Phone_Number__c</fullName>
    <label>Lessee Phone Number</label>
    <type>TextArea</type>
</CustomField>