force-app/main/default/objects/Pipeline__c/fields/Lot_Number_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number_Identifier__c</fullName>
    <description>Alpha-numeric field to input by the Transaction Coordinator.</description>
    <label>Lot Number Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>