force-app/main/default/objects/Pipeline__c/fields/No_Option_Fee__c.field-meta.xml
<CustomField>
    <fullName>No_Option_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is no Option fee</description>
    <label>No Option Fee</label>
    <type>Checkbox</type>
</CustomField>