force-app/main/default/objects/Pipeline__c/fields/Occupancy_Status_Diligence__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status_Diligence__c</fullName>
    <description>Gives the occupancy status at the time of diligence</description>
    <label>Occupancy Status @ Diligence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Tenant Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>