force-app/main/default/objects/Pipeline__c/fields/Occupant_Move_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Move_out_Date__c</fullName>
    <label>Occupant Move-out Date</label>
    <type>Date</type>
</CustomField>