force-app/main/default/objects/Pipeline__c/fields/Option_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Expiration_Date__c</fullName>
    <description>Gives the option expiration date</description>
    <label>Option Expiration Date</label>
    <type>Date</type>
</CustomField>