force-app/main/default/objects/Pipeline__c/fields/Option_Fee_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Option_Fee_at_Closing__c</fullName>
    <label>Option Fee at Closing</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>