force-app/main/default/objects/Pipeline__c/fields/Option_Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Fee_Due_Date__c</fullName>
    <description>Input date field for the Transaction Coordinator</description>
    <label>Option Fee Due Date</label>
    <type>Date</type>
</CustomField>