force-app/main/default/objects/Pipeline__c/fields/Option_Fee_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Fee_Payment_Type__c</fullName>
    <inlineHelpText>When the &quot;Option Fee Payment Type&quot; is &quot;Check&quot; then an email alert goes to the AP team and if the &quot;Option Fee Payment Type&quot; is anything other than &quot;Check&quot; then an email alert goes to the Treasury team.</inlineHelpText>
    <label>Option Fee Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wire w/EMD</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Certified Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>