force-app/main/default/objects/Pipeline__c/fields/Option_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Reviewed_Date__c</fullName>
    <description>Gives the option reviewed date</description>
    <label>Option Reviewed Date</label>
    <type>Date</type>
</CustomField>