force-app/main/default/objects/Pipeline__c/fields/Order_BPO_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_BPO_Date__c</fullName>
    <description>Order BOP Date</description>
    <label>Order BPO Date</label>
    <type>Date</type>
</CustomField>