force-app/main/default/objects/Pipeline__c/fields/Order_Detail_UID__c.field-meta.xml
<CustomField>
    <fullName>Order_Detail_UID__c</fullName>
    <label>BPO Order Detail UID</label>
    <type>TextArea</type>
</CustomField>