force-app/main/default/objects/Pipeline__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>BPO Order ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>