force-app/main/default/objects/Pipeline__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>BPO Order Number</label>
    <type>TextArea</type>
</CustomField>