force-app/main/default/objects/Pipeline__c/fields/Other_Costs_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs_Paid_at_Closing__c</fullName>
    <description>Gives other costs paid at closing</description>
    <formula>Closing_Statement_HOA_Prorates__c + Closing_Statement_Property_Tax_Prorates__c +  Closing_Statement_HOA_Prepays__c + Closing_Statement_Property_Tax_Prepays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Closing Statement HOA Prorates + Closing Statement HOA Prepays + Closing Statement Property Tax Prorates + Closing Statement Property Tax Prepays</inlineHelpText>
    <label>Other Costs Paid at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>