force-app/main/default/objects/Pipeline__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <description>To capture other notes</description>
    <label>Other Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>