force-app/main/default/objects/Pipeline__c/fields/Paid_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Through_Date__c</fullName>
    <description>HOA Paid Through Date</description>
    <label>Paid Through Date</label>
    <type>Date</type>
</CustomField>