force-app/main/default/objects/Pipeline__c/fields/Payable_to__c.field-meta.xml
<CustomField>
    <fullName>Payable_to__c</fullName>
    <label>Payable to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>