force-app/main/default/objects/Pipeline__c/fields/Pending_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cancel_Date__c</fullName>
    <description>Gives the Escrow canceled date</description>
    <label>Pending Cancel Date</label>
    <type>Date</type>
</CustomField>