force-app/main/default/objects/Pipeline__c/fields/Percentage_Closing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Closing_Cost__c</fullName>
    <formula>If(Closing_Statement_Contract_Price__c=0,null,Acq_Costs_Paid_at_Closing__c / Closing_Statement_Contract_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage(%) Closing Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>