force-app/main/default/objects/Pipeline__c/fields/Period_Covered_by_the_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Period_Covered_by_the_Assessment__c</fullName>
    <description>HOA Period Covered by the Assessment</description>
    <label>Period Covered by the Assessment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>