force-app/main/default/objects/Pipeline__c/fields/Pipeline_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_ID_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline ID 18-Digit</label>
    <type>Text</type>
</CustomField>