force-app/main/default/objects/Pipeline__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <description>Gives the Pipeline stage</description>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline Created</fullName>
                <default>true</default>
                <label>Pipeline Created</label>
            </value>
            <value>
                <fullName>Contract Reviewed</fullName>
            </value>
            <value>
                <fullName>EMD Completed</fullName>
            </value>
            <value>
                <fullName>Due Diligence/Budget Approved</fullName>
            </value>
            <value>
                <fullName>Documents Sent</fullName>
            </value>
            <value>
                <fullName>Closing Approved</fullName>
            </value>
            <value>
                <fullName>Property Created</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>