force-app/main/default/objects/Pipeline__c/fields/Pipeline_Stage_before_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage_before_Cancel__c</fullName>
    <label>Pipeline Stage before Cancel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>