force-app/main/default/objects/Pipeline__c/fields/Prelim_Title_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Title_Approval_Date__c</fullName>
    <description>Gives the Prelim title approval date</description>
    <label>Prelim Title Approval Date</label>
    <type>Date</type>
</CustomField>