force-app/main/default/objects/Pipeline__c/fields/Prelim_Title_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Title_Review_Notes__c</fullName>
    <description>Gives the notes mades at Prelim title review</description>
    <label>Prelim Title Review Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>