force-app/main/default/objects/Pipeline__c/fields/Prelim_Title_Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Title_Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Prelim title is reviewed and approved</description>
    <label>Prelim Title Reviewed &amp; Approved</label>
    <type>Checkbox</type>
</CustomField>