force-app/main/default/objects/Pipeline__c/fields/Property_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Formula__c</fullName>
    <formula>Prospect_Record__r.Property_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address (Formula)</label>
    <type>Text</type>
</CustomField>