force-app/main/default/objects/Pipeline__c/fields/Property_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Created_Date__c</fullName>
    <label>Property Created Date</label>
    <type>Date</type>
</CustomField>