force-app/main/default/objects/Pipeline__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <formula>Prospect_Record__r.Property_State__c</formula>
    <label>Property State</label>
    <type>Text</type>
</CustomField>