force-app/main/default/objects/Pipeline__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <formula>Prospect_Record__r.Property_Street_Address__c</formula>
    <label>Property Street Address</label>
    <type>Text</type>
</CustomField>