force-app/main/default/objects/Pipeline__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>Prospect_Record__r.Property_Zip_Code__c</formula>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>