force-app/main/default/objects/Pipeline__c/fields/Prospect_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Name__c</fullName>
    <description>Prospect Name as a formula for Yardi</description>
    <formula>Prospect_Record__r.Name</formula>
    <label>Prospect Name</label>
    <type>Text</type>
</CustomField>