force-app/main/default/objects/Pipeline__c/fields/Prospect_Zip__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Zip__c</fullName>
    <formula>Prospect_Record__r.Property_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Zip</label>
    <type>Text</type>
</CustomField>