force-app/main/default/objects/Pipeline__c/fields/Purchase_Price_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Date__c</fullName>
    <formula>Prospect_Record__r.Purchase_Price_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price Date</label>
    <type>Date</type>
</CustomField>